--- a/css/main.css
+++ b/css/main.css
@@ -335,13 +335,14 @@ strong {
     color: #fff;
     margin-top: auto;
 }
-
-.double-img{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 60px;
+.hero-title span {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 122%
 }
+
+
 
 .nav {
     display: none;
@@ -608,5 +609,67 @@ strong {
     pointer-events: initial;
     -webkit-box-shadow: 4px 3px 5px 0px rgba(0,0,0,.26);
     box-shadow: 4px 3px 5px 0px rgba(0,0,0,.26)
+}
+.quote-banner{
+    padding: 30px;
+    background-color: #E2F3FE;
+}
+.quote-holder{
+    position: relative;
+    padding: 0 40px;
+}
+.icon-quote{
+    position: absolute;
+    width: 40px;
+    height: 20px;
+}
+.quote-start{
+    left: 0;
+    top:0;
+}
+.quote-end{
+    right: 0;
+    bottom:0;
+}
+.quote{
+    max-width: 730px;
+    margin: 0 auto;
+    color: #092A5E;
+    text-align: center;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px; /* 155.556% */
+}
+.quote-info{
+    padding-top: 50px;
+    position: relative;
+    text-align: center;
+}
+.quote-info:before{
+    content: "";
+    display: block;
+    position: absolute;
+    left: 50%;
+    top:0;
+    background-color: #fff;
+    height: 2px;
+    width: 154px;
+    transform: translateX(-50%);
+}
+.author{
+    color: #092A5E;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 28px; /* 140% */
+}
+.author-info{
+    color: #092A5E;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
 }
 
