--- a/css/main.css
+++ b/css/main.css
@@ -382,7 +382,7 @@ strong {
 .nav-list--item {
     -webkit-transition: all .3s ease;
     transition: all .3s ease;
-    margin-right: 44px;
+    margin-right: 27px;
     display: inline-block;
 }
 .nav-list--item:last-of-type {
@@ -480,15 +480,20 @@ strong {
 }
 
 .content-title {
-    margin-bottom: 20px;
-    font-size: 30px;
-    line-height: 38px;
+    color: #092A5E;
+    font-size: 25px;
+    font-style: normal;
     font-weight: 700;
+    line-height: 38px;
+    margin-bottom: 10px;
 }
 
 .content-text {
     margin-bottom: 0;
-    line-height: 28px;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
 }
 
 .footer {
