--- a/css/media.css
+++ b/css/media.css
@@ -51,6 +51,14 @@
 }
 
 @media screen and (min-width: 769px) {
+    .cloud-block{
+        display: flex;
+    }
+    .tips-block{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 20px;
+    }
     .section {
         padding: 80px 0;
     }
@@ -109,11 +117,40 @@
         grid-template-columns: repeat(3, 1fr);
     }
     .section-bottom{
-        margin-bottom: 120px;
-        padding-top: 100px;
+        margin-bottom: 70px;
+        padding-top: 0;
+    }
+    .cloud-text{
+        padding: 75px 75px 75px 256px;
     }
 }
 @media(min-width: 1200px) {
+    .left-img{
+        position: absolute;
+        top:0;
+        left: 0;
+    }
+    .img-section-1{
+        margin-top: -80px;
+        position: relative;
+        z-index: 1;
+    }
+    .img-section-3{
+        margin-bottom: -194px;
+    }
+    .img-section-6{
+        margin-top: -40px;
+    }
+    .img-section-7{
+        margin-top: -40px;
+    }
+
+    .section-4{
+        padding-top: 200px!important;
+    }
+    .section-7{
+        padding-top: 0!important;
+    }
     .section-title {
         font-size:30px;
     }
@@ -128,9 +165,6 @@
     }
     .nav-list--link {
         line-height: 19px;
-    }
-    .swiper {
-        height:753px;
     }
     .swiper-button-next, .swiper-button-prev {
         display: flex!important;
