--- a/css/main.css
+++ b/css/main.css
@@ -443,7 +443,7 @@ strong {
     max-width: 851px;
     width: 100%;
     padding: 75px;
-    background-image: url("/img/tui-vector-wolke.svg");
+    background-image: url("../img/tui-vector-wolke.svg");
     object-fit: cover;
     background-position: center;
     background-repeat: no-repeat;
